Fixed small alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,7 @@ main {
 
   #about section h3 {
     font-size: 1em;
+    width: 50%;
   }
 
   #about p {
